# gzcli

./: README.md  pyproject.toml
docs/: challenge_spec.md
src/gzcli/api/: _http.py  assets.py  edit.py  team.py
src/gzcli/api/models/: __init__.py  account.py  admin.py  data.py  edit.py  enum.py  game.py  info.py
src/gzcli/api/models/requests/: edit.py  team.py
src/gzcli/cli/: auth.py  config.py  entrypoint.py  errors.py  gz.py  models.py
src/gzcli/cli/groups/: challenge.py  game.py  team.py
